# meeting_record

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  app.py  app_auth.py  ask.py  compare.py  config.py  dict.py  doctor.py  enroll.py  export.py  main.py  moderator.py  pyproject.toml  qa_watcher.py  requirements.txt  search.py  semantic_index.py  setup.bat  stats.py  watcher.py  대화중중요기록.txt
.github/workflows/: ci.yml  release.yml
g5_meeting_api/: README.md
g5_meeting_api/plugin/meeting_api/: _bootstrap.php  _load_gnuboard5.php  cleanup_tests.php  comment.php  config.local.php.example  config.php  delete_post.php  health.php  hide_post.php  list_comments.php  post.php  posts.php  questions.php  semantic_search.php  setup_board.php  update_comment.php  update_post.php
g5_metting_api/: README.md
g5_metting_api/plugin/metting_api/: _bootstrap.php  _load_gnuboard5.php  comment.php  config.local.php.example  config.php  health.php  post.php  setup_board.php
meeting_record/: __init__.py  cli.py  console.py
scripts/: backup.py  check_g5_remote.py  deploy_plugin.ps1  download_models.py  fix_summary_721.py  make_social_preview.py  migrate_board_tables.py  migrate_metting_to_meeting.sql  setup_windows.ps1  test_pii.py  update_comment_authors.py
scripts/dev/: fix_summary_721.py  inspect_speakers.py
src/: audio.py  cache.py  comparator.py  diarizer_local.py  dictionary.py  embeddings.py  exporter.py  g5_client.py  idempotency.py  moderator.py  notifier.py  pii.py  post_footer.py  post_index.py  quality.py  rag.py  runtime_memory.py  speaker_registry.py  stats.py  storage.py  summarizer.py  transcriber.py  vectorstore.py  whisper_prompt.py
src/storage/: __init__.py  __main__.py  db.py  meetings.py  schema.py  search.py  sync.py
src/summarizer/: __init__.py  __main__.py  chunking.py  ollama_io.py  parsing.py  prompts.py  sections.py
tests/: test_app_auth.py  test_audio.py  test_cache.py  test_comparator.py  test_diarizer_local.py  test_dictionary.py  test_embeddings.py  test_exporter.py  test_g5_client.py  test_idempotency.py  test_moderator.py  test_notifier.py  test_pii_masking.py  test_post_footer.py  test_post_index.py  test_quality.py  test_rag.py  test_runtime_memory.py  test_stats.py  test_storage.py  test_summarizer_core.py  test_summarizer_options.py  test_transcriber.py  test_vectorstore.py  test_whisper_prompt.py
tests/php/: test_bootstrap.php
